Resolved: resolved layout issues

--- a/assets/sass/core/base.scss
+++ b/assets/sass/core/base.scss
@@ -5066,7 +5066,6 @@ form {
 
 @media screen and (max-width: 508px) {
   ._1KQuz {
-    border-top: 1px solid rgba(103, 143, 185, 0.2);
     border-bottom: 1px solid rgba(103, 143, 185, 0.2);
   }
 }
@@ -10679,7 +10678,6 @@ div._3bqe5 {
   ._2cP6X {
     width: 100%;
     height: 100px;
-    border-bottom: 1px solid rgba(0, 8, 39, 0.96);
   }
 }
 
