--- a/public/css/af.css
+++ b/public/css/af.css
@@ -5518,7 +5518,6 @@ form ._2Kdch {
 
 @media screen and (max-width: 508px) {
   ._1KQuz {
-    border-top: 1px solid rgba(103, 143, 185, 0.2);
     border-bottom: 1px solid rgba(103, 143, 185, 0.2);
   }
 }
@@ -11490,7 +11489,6 @@ div._3bqe5 > div {
   ._2cP6X {
     width: 100%;
     height: 100px;
-    border-bottom: 1px solid rgba(0, 8, 39, 0.96);
   }
 }
 
